infrastructure/darkbit-site/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apolline-deploy
  namespace: darkbit
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apolline-web
  template:
    metadata:
      labels:
        app: apolline-web
      annotations:
        reloader.stakater.com/auto: "true"
    spec:
      containers:
      - name: web
        image: jeff7712/apolline:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "500m"
            memory: "256Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          runAsUser: 101
